--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -16,10 +16,10 @@ html,
 body {
 	height: 100%;
 	width: 100%;
-	font-family: 'raleway', 'sans-serif';
+	font-family: 'Raleway', sans-serif;
 	background-color: #faf5ef;
 	color: #5b4c3f;
-	line-height: 1.5;
+	line-height: 120%;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -49,9 +49,49 @@ button {
 
 body {
 	color: var(--body-colour, #645242);
-	font-family: Raleway;
 	font-size: 20px;
 	font-style: normal;
 	font-weight: 400;
-	line-height: 120%; /* 24px */
+	padding: 0 16px;
+}
+
+h1,
+h2 {
+	font-family: 'Noto Serif Display', serif;
+	color: #5b4c3f;
+}
+h1 {
+	text-align: right;
+	padding: 0 12px;
+	font-size: 48px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 100%;
+	letter-spacing: -5px;
+}
+
+h1 span {
+	font-family: 'Poppins', sans-serif;
+	font-size: 24px;
+	letter-spacing: -1px;
+}
+
+h2 {
+	font-size: 30px;
+	font-weight: 400;
+	letter-spacing: -2px;
+	padding: 10px 0;
+}
+
+p {
+	padding: 10px 0;
+	font-family: 'Raleway', sans-serif;
+	font-size: 15px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: 30px;
+}
+
+section {
+	padding: 0 0 10px;
 }
