content added, styling updated

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -67,7 +67,7 @@ h4 {
 	text-decoration: underline;
 }
 h1 {
-	text-align: right;
+	text-align: center;
 	padding: 0 12px;
 	font-size: 48px;
 	font-style: normal;
