--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -80,6 +80,7 @@ h1 span {
 	font-family: 'Poppins', sans-serif;
 	font-size: 24px;
 	letter-spacing: -1px;
+	padding: 0 10px;
 }
 
 h2 {
@@ -87,6 +88,8 @@ h2 {
 	font-weight: 400;
 	letter-spacing: -2px;
 	padding: 10px 0;
+	text-transform: uppercase;
+	text-align: center;
 }
 
 p,
