--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -22,6 +22,7 @@ body {
 	line-height: 120%;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	overflow-x: hidden;
 }
 
 button,
