--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -14,8 +14,6 @@
 
 html,
 body {
-	height: 100%;
-	width: 100%;
 	font-family: 'Raleway', sans-serif;
 	background-color: #faf5ef;
 	color: #5b4c3f;
@@ -53,6 +51,9 @@ body {
 	font-size: 20px;
 	font-style: normal;
 	font-weight: 400;
+}
+
+.page {
 	padding: 0 16px;
 }
 
